# Python-Packaging-and-Repo

./: README.md  readme.md
.example/pdm, src layout, & relative import/vagrantai/: README.md  pyproject.toml
.example/vagrantai/pdm, src layout, & relative import/: pyproject.toml
.example/vagrantai/pdm, src layout, & relative import/src/vagrantai/: __init__.py
.example/vagrantai/pdm, src layout, & relative import/src/vagrantai/template/: __init__.py
.graph/: Development mode - Editable Install:  Editable Install: pip install -e .  Packaging Steps.md  Perfect Packaging.md  pip install -e .
.graph/Best practices:/Development Mode: Editable Install/: readme.md
.graph/Best:/: Editable Install - for Development:
.graph/Best: pyproject.toml/: readme.md
.graph/Best:/Cookiecutter/: readme.md
.graph/Best:/Python Development Master/: readme.md
.graph/Best:/pyproject.toml/: readme.md
.graph/Best:/src layout/: readme.md
.graph/Devpi/: readme.md
.graph/Entry Point/: readme.md
.graph/Import fundamentals/: readme.md
.graph/Manifest.in/: readme.md
.graph/Namespace Packages/: readme.md
.graph/Namespace Packages/IDE/: PyCharm.md
.graph/Namespace Packages/Setuptools Autodiscovery/: readme.md
.graph/Pip/pip install -e ./: readme.md
.graph/Private PyPI/: readme.md
.graph/PyCharm/: readme.md
.graph/Relative import/: readme.md
.graph/Setuptools/: readme.md
.graph/Template/: readme.md
.graph/__init__.py for Library/: readme.md
.graph/devpi/: readme.md
.graph/packaging/: readme.md
.graph/src layout/: readme.md
PDM/: setup.py
(+25 files in other folders)
